XD-369: DSL syntax extensions